# CMakeList.txt : CMake project for MipsAssembler, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (myAssembler "myAssembler.cpp" "myAssembler.h")

# TODO: Add tests and install targets if needed.
